Learning Git with JetBrains IDE. Rewritten <main> height and added little animation for active form of edit button. And tab indexes for user's info

--- a/userpage.html
+++ b/userpage.html
@@ -57,15 +57,15 @@
                 <div class="main_form_item flex-between">
                     <div class="user_info flex-left roboto-regular-main">
                         <ul>
-                            <li>Имя:        </li>
-                            <li>Фамилия:    </li>
-                            <li>Логин:      </li>
-                            <li>Роль:       </li>
+                            <li tabindex="19">Имя:        </li>
+                            <li tabindex="19">Фамилия:    </li>
+                            <li tabindex="19">Логин:      </li>
+                            <li tabindex="19">Роль:       </li>
                         </ul>
                     </div>
                     <div class="flex-right">
                         <button class="edit_button" tabindex="20">
-                            <img src="media/Edit.svg" alt="Кнопка редактирования личных данных">
+                            <img src="media/Edit.svg" alt="Кнопка 'Редактировать данные профиля' ">
                         </button>
                     </div>
                 </div>
