Learning Git with JetBrains IDE. Rewritten <main> height and added little animation for active form of edit button. And tab indexes for user's info

--- a/authorization.html
+++ b/authorization.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/authorization_media.css">
     <link rel="shortcut icon" href="media/Favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -46,13 +47,13 @@
         </nav>
     </div>
 </header>
-<main class="flex-column-center">
+<main class="flex-column-center ">
     <section class="main_form_container flex-center">
         <div class="content roboto-regular">
             <form action="">
                 <div class="main_form background_white">
                     <div class="main_form_item">
-                        <h2>Авторизация</h2>
+                        <h1>Авторизация</h1>
                     </div>
                     <div class="main_form_fields flex-column-center">
                         <label for="login">Ваш логин</label>
