Some media fixes

--- a/registration.html
+++ b/registration.html
@@ -47,7 +47,7 @@
     </div>
 </header>
 
-<main class="flex-column-center">
+<main class="flex-column-center main">
     <section class="main_registration_container flex-center">
         <div class="content roboto-regular">
             <form action="">
