--- a/userpage.html
+++ b/userpage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/modal.css">
     <link rel="shortcut icon" href="media/Favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -21,9 +22,13 @@
                 </ul>
             </div>
             <div class="hamburger_container">
-                <button class="hamburger">
-                    <img src="media/menu_gamburger.svg" alt="Кнопка меню-гамбургер, открывающая окно навигации по странице ">
-                </button>
+                <div class="hamburger" id="openModal">
+                    <div id="nav-icon4" role="presentation">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
             </div>
             <div class="nav_logo">
                 <img src="media/Logo.svg" alt="Иконка чёрного замка на фоне белого круга - логотип">
@@ -68,20 +73,30 @@
                             <img src="media/Edit.svg" alt="Кнопка 'Редактировать данные профиля' ">
                         </button>
                     </div>
+
+                    <!-- The Modal -->
+                    <div id="myModal" class="modal">
+                        <!-- Modal content -->
+                        <div class="modal-content">
+                            <p>Some text in the Modal..</p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
     </section>
 </main>
 <footer>
-    <section class="footer_links_container background_white flex-center">
+    <div class="footer_links_container background_white flex-center">
         <div class="content">
             <div class="footer_links flex-around roboto-regular">
                 <a href="" tabindex="97" class="text_black">+7-123-456-78-90</a>
                 <a href="" tabindex="98" class="text_black">info@mail.ru</a>
             </div>
         </div>
-    </section>
+    </div>
 </footer>
+<script src="js/menu.js"></script>
 </body>
 </html>
