--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="styles/modal.css">
     <link rel="shortcut icon" href="media/Favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -21,9 +22,13 @@
                 </ul>
             </div>
             <div class="hamburger_container">
-                <button class="hamburger">
-                    <img src="media/menu_gamburger.svg" alt="Кнопка меню-гамбургер, открывающая окно навигации по странице ">
-                </button>
+                <div class="hamburger" id="openModal">
+                    <div id="nav-icon4" role="presentation">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                </div>
             </div>
             <div class="nav_logo">
                 <img src="media/Logo.svg" alt="Иконка чёрного замка на фоне белого круга - логотип">
@@ -52,6 +57,15 @@
             <div class="main_banner background_white flex-column-center" >
                 <p tabindex="15">Менеджер паролей - хорошее и безопасное решение для IT организаций. Создавайте пароли и разграничивайте к ним доступ с помощью ролей и категорий.</p>
                 <button class="main_banner_button background_red text_white" tabindex="16">Начать</button>
+
+                <!-- The Modal -->
+                <div id="myModal" class="modal">
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <p>Some text in the Modal..</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
@@ -66,5 +80,6 @@
         </div>
     </div>
 </footer>
+<script src="js/menu.js"></script>
 </body>
 </html>
