--- a/password/edit_password.html
+++ b/password/edit_password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Новый пароль</title>
+    <title>Изменить пароль</title>
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../styles/header.css">
     <link rel="stylesheet" href="../styles/modal.css">
@@ -57,9 +57,11 @@
             <form>
                 <div class="main_form background_white">
                     <div class="main_form_item">
-                        <h1>Новый пароль</h1>
+                        <h1>Изменить пароль</h1>
                     </div>
                     <div class="main_form_fields flex-column-center">
+                        <input type="hidden" id="password_id" value="">
+
                         <label for="name">Название пароля</label>
                         <input placeholder="Введите название для пароля" class="form_input" aria-labelledby="name" type="text" id="name" name="name" tabindex="20">
                         <br>
