Updated modal in all pages

--- a/create_category.html
+++ b/create_category.html
@@ -73,7 +73,25 @@
                     <div id="myModal" class="modal">
                         <!-- Modal content -->
                         <div class="modal-content">
-                            <p>Some text in the Modal..</p>
+                            <ul class="modal_links">
+                                <li class="roboto-bold"><a class="text_white modal_link" href="">Главная</a></li>
+                                <li class="roboto-bold">
+                                    <a class="text_white modal_link" href="">Пароли</a>
+                                    <ul>
+                                        <li class="roboto-bold"><a class="text_white modal_link" href="">Все пароли</a></li>
+                                        <li class="roboto-bold"><a class="text_white modal_link" href="">Новый пароль</a></li>
+                                    </ul>
+                                </li>
+                                <li class="roboto-bold">
+                                    <a class="text_white modal_link" href="">Категории</a>
+                                    <ul>
+                                        <li class="roboto-bold"><a class="text_white modal_link" href="">Все категории</a></li>
+                                        <li class="roboto-bold"><a class="text_white modal_link" href="">Новая категория</a></li>
+                                    </ul>
+                                </li>
+                                <li class="roboto-bold"><a class="text_white modal_link" href="">Личный кабинет</a></li>
+                                <li class="roboto-bold"><a class="text_white modal_link" href="">Выйти</a></li>
+                            </ul>
                         </div>
                     </div>
 
