--- a/password/create_password.html
+++ b/password/create_password.html
@@ -19,6 +19,20 @@
                     <li>
                         <a href="" class="text_white" tabindex="10">Главная</a>
                     </li>
+                    <li class="dropdown_trigger">
+                        <a href="" class="text_white " tabindex="10">Пароли</a>
+                        <ul class="dropdown_container">
+                            <li><a href="" class="text_white">Все пароли</a></li>
+                            <li><a href="" class="text_white">Новый пароль</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown_trigger">
+                        <a href="" class="text_white" tabindex="10">Категории</a>
+                        <ul class="dropdown_container">
+                            <li><a href="" class="text_white">Все категории</a></li>
+                            <li><a href="" class="text_white">Новая категория</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <div class="hamburger_container">
@@ -36,10 +50,10 @@
             <div class="nav_links">
                 <ul class="flex-around align-center">
                     <li>
-                        <a href="" class="text_white" tabindex="11">Регистрация</a>
+                        <a href="" class="text_white" tabindex="11">Личный кабинет</a>
                     </li>
                     <li>
-                        <a href="" class="text_white" tabindex="12">Вход</a>
+                        <a href="" class="text_white" tabindex="12">Выход</a>
                     </li>
                     <li>
                         <button class="nav_theme_button" tabindex="13">
