Updated navigation between pages

--- a/edit_profile.html
+++ b/edit_profile.html
@@ -17,20 +17,20 @@
             <div class="nav_links">
                 <ul class="flex-around align-center">
                     <li>
-                        <a href="" class="text_white" tabindex="10">Главная</a>
+                        <a href="/index.html" class="text_white" tabindex="10">Главная</a>
                     </li>
                     <li class="dropdown_trigger">
                         <a href="" class="text_white " tabindex="10">Пароли</a>
                         <ul class="dropdown_container">
-                            <li><a href="" class="text_white">Все пароли</a></li>
-                            <li><a href="" class="text_white">Новый пароль</a></li>
+                            <li><a href="/password/passwords.html" class="text_white">Все пароли</a></li>
+                            <li><a href="/password/create_password.html" class="text_white">Новый пароль</a></li>
                         </ul>
                     </li>
                     <li class="dropdown_trigger">
                         <a href="" class="text_white" tabindex="10">Категории</a>
                         <ul class="dropdown_container">
-                            <li><a href="" class="text_white">Все категории</a></li>
-                            <li><a href="" class="text_white">Новая категория</a></li>
+                            <li><a href="/categories.html" class="text_white">Все категории</a></li>
+                            <li><a href="/create_category.html" class="text_white">Новая категория</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -50,10 +50,10 @@
             <div class="nav_links">
                 <ul class="flex-around align-center">
                     <li>
-                        <a href="" class="text_white" tabindex="11">Личный кабинет</a>
+                        <a href="/userpage.html" class="text_white" tabindex="11">Личный кабинет</a>
                     </li>
                     <li>
-                        <a href="" class="text_white" tabindex="12">Выход</a>
+                        <a href="/" class="text_white" tabindex="12">Выход</a>
                     </li>
                     <li>
                         <button class="nav_theme_button" tabindex="13">
@@ -106,23 +106,23 @@
                         <!-- Modal content -->
                         <div class="modal-content">
                             <ul class="modal_links">
-                                <li class="roboto-bold"><a class="text_white modal_link" href="">Главная</a></li>
+                                <li class="roboto-bold"><a class="text_white modal_link" href="/">Главная</a></li>
                                 <li class="roboto-bold">
                                     <a class="text_white modal_link" href="">Пароли</a>
                                     <ul>
-                                        <li class="roboto-bold"><a class="text_white modal_link" href="">Все пароли</a></li>
-                                        <li class="roboto-bold"><a class="text_white modal_link" href="">Новый пароль</a></li>
+                                        <li class="roboto-bold"><a class="text_white modal_link" href="/password/passwords.html">Все пароли</a></li>
+                                        <li class="roboto-bold"><a class="text_white modal_link" href="/password/create_password.html">Новый пароль</a></li>
                                     </ul>
                                 </li>
                                 <li class="roboto-bold">
                                     <a class="text_white modal_link" href="">Категории</a>
                                     <ul>
-                                        <li class="roboto-bold"><a class="text_white modal_link" href="">Все категории</a></li>
-                                        <li class="roboto-bold"><a class="text_white modal_link" href="">Новая категория</a></li>
+                                        <li class="roboto-bold"><a class="text_white modal_link" href="categories.html">Все категории</a></li>
+                                        <li class="roboto-bold"><a class="text_white modal_link" href="create_category.html">Новая категория</a></li>
                                     </ul>
                                 </li>
-                                <li class="roboto-bold"><a class="text_white modal_link" href="">Личный кабинет</a></li>
-                                <li class="roboto-bold"><a class="text_white modal_link" href="">Выйти</a></li>
+                                <li class="roboto-bold"><a class="text_white modal_link" href="/userpage.html">Личный кабинет</a></li>
+                                <li class="roboto-bold"><a class="text_white modal_link" href="/">Выйти</a></li>
                             </ul>
                         </div>
                     </div>
