--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="nav_links">
                 <ul class="flex-around align-center">
                     <li>
-                        <a href="" class="text_white" tabindex="10">Главная</a>
+                        <a href="/" class="text_white" tabindex="10">Главная</a>
                     </li>
                 </ul>
             </div>
@@ -36,10 +36,10 @@
             <div class="nav_links">
                 <ul class="flex-around align-center">
                     <li>
-                        <a href="" class="text_white" tabindex="11">Регистрация</a>
+                        <a href="/registration.html" class="text_white" tabindex="11">Регистрация</a>
                     </li>
                     <li>
-                        <a href="" class="text_white" tabindex="12">Вход</a>
+                        <a href="/authorization.html" class="text_white" tabindex="12">Вход</a>
                     </li>
                     <li>
                         <button class="nav_theme_button" tabindex="13">
@@ -63,23 +63,23 @@
                     <!-- Modal content -->
                     <div class="modal-content">
                         <ul class="modal_links">
-                            <li class="roboto-bold"><a class="text_white modal_link" href="">Главная</a></li>
+                            <li class="roboto-bold"><a class="text_white modal_link" href="/">Главная</a></li>
                             <li class="roboto-bold">
                                 <a class="text_white modal_link" href="">Пароли</a>
                                 <ul>
                                     <li class="roboto-bold"><a class="text_white modal_link" href="">Все пароли</a></li>
-                                    <li class="roboto-bold"><a class="text_white modal_link" href="">Новый пароль</a></li>
+                                    <li class="roboto-bold"><a class="text_white modal_link" href="/password/create_password.html">Новый пароль</a></li>
                                 </ul>
                             </li>
                             <li class="roboto-bold">
                                 <a class="text_white modal_link" href="">Категории</a>
                                 <ul>
                                     <li class="roboto-bold"><a class="text_white modal_link" href="">Все категории</a></li>
-                                    <li class="roboto-bold"><a class="text_white modal_link" href="">Новая категория</a></li>
+                                    <li class="roboto-bold"><a class="text_white modal_link" href="create_category.html">Новая категория</a></li>
                                 </ul>
                             </li>
-                            <li class="roboto-bold"><a class="text_white modal_link" href="">Личный кабинет</a></li>
-                            <li class="roboto-bold"><a class="text_white modal_link" href="">Выйти</a></li>
+                            <li class="roboto-bold"><a class="text_white modal_link" href="/userpage.html">Личный кабинет</a></li>
+                            <li class="roboto-bold"><a class="text_white modal_link" href="/">Выйти</a></li>
                         </ul>
                     </div>
                 </div>
